assets/css/stylesheet.css
/* ... */
.container-top {
    border-bottom: solid 2px #fff;
    padding: 0.8em;
    font-size: 1.8rem;
    font-weight: 600;
    color: rgb(240, 234, 234);
    background-color: rgba(107, 138, 252, 255);
}

.container-content {
    background-color: rgba(38, 44, 80, 255);
    color: rgb(209, 208, 208);
    padding: 0.8em;
    font-size: 1.2rem;
    line-height: 2rem;
    flex-grow: 1;
}

.container-content img {
    width: 100%;
}

.about-info {
    margin-bottom: 6em;
}

@media (max-width: 992px) {
    #about {
        max-width: 90%;
    }

    .container {
        max-width: 80%;
    }

    .navbar .toggle_btn {
        display: block;
    }

    .logo img{
        width: 4em;
    }

    .container-top {
        font-size: 1.6rem;
    }

    .container-content {
        font-size: 1.1rem;
    }

    #gear1 {
        left: 12%;
        top: 32%;
    }

    #gear2 {
        left: 78%;
        top: 25%;
    }

    .gear {
        height: 4em;
    }

    #computer-asset {
        width: 18em;
        top: 27%;
        left: 55%;
    }
}

@media (max-width: 720px) {
    #about {
        flex-direction: column;
    }

    .container {
        max-width: 100%;
    }
    #gear1 {
        left: 12%;
        top: 22%;
    }

    #gear2 {
        left: 72%;
        top: 17%;
    }
    .gear {
        height: 3em;
    }

    #computer-asset {
        width: 12em;
        top: 21%;
        left: 50%;
    }
}

@media (max-width: 385px) {
    #computer-asset {
        width: 10em;
        top: 18%;
        left: 45%;
    }

    #gear1 {
        left: 12%;
        top: 20%;
    }

    #gear2 {
        left: 72%;
        top: 16%;
    }

    .gear {
        height: 2.5em;
    }
}

/* stuff
*/

.stuff {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* background-color: #0c0c3b; */
    background-image: linear-gradient(#0c0c3b, #2c0c3b);
    z-index: 1;
}

.accordion-title {
    
    font-weight: 600;
    font-size: 2rem;
    padding-bottom: 2em;
    width: 60%;
}

.dummy {
    opacity: 0;
}

/* Accordion */
#faq {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
    padding-bottom: 5em;
}

.cols {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
}

.accordion__label {
    padding: 1em 1.2em;
    font-size: 1.1rem;
}

#faq p {
    margin: 0;
}

.accordion__content {
    padding: 0em 1.2em;
    padding-bottom: 1em;
}

.accordion__label {
    display: block;
    color: rgb(240, 234, 234);
    font-weight: 800;
    cursor: pointer;
    position: relative;
    transition: background 0.1s;
}

.accordion__label::after {
    content: url('assets/add-symbol.svg');
    position: absolute;
    right: 1.5em;
    background-size: contain;
    transition: transform 0.2s;
    transform-origin: center;
}

.accordion__content {
    font-size: 1rem;
    display: none;
    animation: fadeIn 1s;
    color: rgb(209, 208, 208);
}

#faq .container {
    width: 80%; 
    border-top: none;
    --shadow-color: hsla(305, 81%, 62%, 0.944);
    filter: drop-shadow(
      1px 2px 8px var(--shadow-color)
    );
}

#faq .container:nth-child(2) {
    border-top: white 2px solid;
}

.accordion__input {
    display: none;
}

.accordion__input:checked ~ .accordion__content {
    display: block;
    opacity: 1;
}

.accordion__input:checked ~ .accordion__label::after {
    transform: rotate(45deg);
}

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

@media (max-width: 720px) {
    #about {
        margin-bottom: 8em;
    }
    
    #faq {
        flex-direction: column;
        align-items: center;
    }
    #faq .container {
        width: 100%; 
    }
    .cols {
        width: 90%;
        margin: 0;
    }

    .dummy {
        display: none;
    }

    .accordion-title {
        padding-bottom: 1.5em;
        margin-right: auto;
    }
}

@media (max-width: 992px) {
    .accordion-title {
        width: 80%;
    }

    #about {
        margin-bottom: 10em;
    }

    #
} 

/* footer */
footer {
    background-color: #07071f;
    color: white;
    padding: 1.25em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    }
     
.left {
    font-size: 1.2rem;
}

.right {
    display: flex;
}

.right a {
    margin-left: 1em;
}

.right a img {
    width: 2em;
}

@media (max-width: 720px) {

    .left {
        font-size: 1rem;
    }
}







/* Glow button : */
.glowbutton {
    font-family: JetBrains Mono, monospace;
    --glow-color: rgb(176, 252, 255);
    --glow-spread-color: rgba(123, 251, 255, 0.781);
    --enhanced-glow-color: rgb(206, 255, 255);
    --btn-color: rgb(61, 127, 136);
    border: 0.25em solid var(--glow-color);
    padding: 1em 3em;
    cursor: pointer;
    margin-top: 20px;
    color: var(--glow-color);
    font-size: 15px;
    font-weight: bold;
    background-color: var(--btn-color);
    border-radius: 1em;
    outline: none;
    box-shadow: 0 0 1em 0.25em var(--glow-color),
      0 0 4em 1em var(--glow-spread-color),
      inset 0 0 0.75em 0.25em var(--glow-color);
    text-shadow: 0 0 0.5em var(--glow-color);
    position: relative;
    transition: all 0.3s;
    z-index: 10;
  }
  
  .glowbutton::after {
    pointer-events: none;
    content: "";
    position: absolute;
    top: -50%;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: var(--glow-spread-color);
    filter: blur(2em);
    opacity: 0.4;
    rotate: 180deg;
    transform: perspective(1.5em) rotateX(35deg) scale(1, 0.6);
    transition: all 0.3s;
    
}.glowbutton::after {
    pointer-events: none;
    content: "";
    position: absolute;
    top: -50%;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: var(--glow-spread-color);
    filter: blur(2em);
    opacity: 0.4;
    rotate: 180deg;
    transform: perspective(1.5em) rotateX(35deg) scale(1, 0.6);
    transition: all 0.3s;
}
/* ... */

